{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 97,
  "lineage": "9d975d73-e12f-7cef-9fb9-d19df7e62a5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9e868092fca1dfc",
            "arn": "arn:aws:ec2:ap-south-1:225398952351:elastic-ip/eipalloc-0a9e868092fca1dfc",
            "association_id": "eipassoc-0cc0b5b72520766b2",
            "domain": "vpc",
            "id": "eipalloc-0a9e868092fca1dfc",
            "instance": "i-0f2975b0d82eabe7b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-05dea7a51f2a242f2",
            "private_dns": "ip-10-0-1-49.ap-south-1.compute.internal",
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-13-202-37-196.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.37.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nexchat-eip",
              "Project": "nexchat"
            },
            "tags_all": {
              "Name": "nexchat-eip",
              "Project": "nexchat"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.app",
            "aws_s3_bucket.uploads",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a936bb624678fd88",
            "arn": "arn:aws:ec2:ap-south-1:225398952351:instance/i-0f2975b0d82eabe7b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nexchat-ec2-profile",
            "id": "i-0f2975b0d82eabe7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nexchat-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05dea7a51f2a242f2",
            "private_dns": "ip-10-0-1-49.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-13-234-34-225.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.34.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06f10e3e4aa24629e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029dfc6a506951238",
            "tags": {
              "Environment": "production",
              "Name": "nexchat-app-server",
              "Project": "nexchat"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nexchat-app-server",
              "Project": "nexchat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f648d366d031203a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_s3_bucket.uploads",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225398952351:internet-gateway/igw-07518223d087034e2",
            "id": "igw-07518223d087034e2",
            "owner_id": "225398952351",
            "tags": {
              "Name": "nexchat-igw",
              "Project": "nexchat"
            },
            "tags_all": {
              "Name": "nexchat-igw",
              "Project": "nexchat"
            },
            "vpc_id": "vpc-07d87da488b213d4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:225398952351:loadbalancer/app/nexchat-alb/41a306eab29bb786",
            "arn_suffix": "app/nexchat-alb/41a306eab29bb786",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nexchat-alb-357287913.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:225398952351:loadbalancer/app/nexchat-alb/41a306eab29bb786",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nexchat-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06a314f8fc38f8b64"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-029dfc6a506951238"
              },
              {
                "subnet_id": "subnet-0699611d4cccc2dc9"
              }
            ],
            "subnets": [
              "subnet-029dfc6a506951238",
              "subnet-0699611d4cccc2dc9"
            ],
            "tags": {
              "Name": "nexchat-alb"
            },
            "tags_all": {
              "Name": "nexchat-alb"
            },
            "vpc_id": "vpc-07d87da488b213d4b",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:225398952351:listener/app/nexchat-alb/41a306eab29bb786/c126a7f92a5cf955",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:225398952351:targetgroup/nexchat-tg/7161ff2b8ee40aec",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:225398952351:listener/app/nexchat-alb/41a306eab29bb786/c126a7f92a5cf955",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:225398952351:loadbalancer/app/nexchat-alb/41a306eab29bb786",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:225398952351:targetgroup/nexchat-tg/7161ff2b8ee40aec",
            "arn_suffix": "targetgroup/nexchat-tg/7161ff2b8ee40aec",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:225398952351:targetgroup/nexchat-tg/7161ff2b8ee40aec",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nexchat-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nexchat-tg"
            },
            "tags_all": {
              "Name": "nexchat-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07d87da488b213d4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:225398952351:targetgroup/nexchat-tg/7161ff2b8ee40aec-20260510071809010600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:225398952351:targetgroup/nexchat-tg/7161ff2b8ee40aec",
            "target_id": "i-0f2975b0d82eabe7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.app",
            "aws_lb_target_group.app",
            "aws_s3_bucket.uploads",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225398952351:route-table/rtb-038c0b654aef915bd",
            "id": "rtb-038c0b654aef915bd",
            "owner_id": "225398952351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07518223d087034e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nexchat-public-rt",
              "Project": "nexchat"
            },
            "tags_all": {
              "Name": "nexchat-public-rt",
              "Project": "nexchat"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d87da488b213d4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0399ab42859815c7a",
            "route_table_id": "rtb-038c0b654aef915bd",
            "subnet_id": "subnet-029dfc6a506951238"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09be6fb61a42fcd9d",
            "route_table_id": "rtb-038c0b654aef915bd",
            "subnet_id": "subnet-0699611d4cccc2dc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225398952351:security-group/sg-06a314f8fc38f8b64",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a314f8fc38f8b64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nexchat-alb-sg",
            "name_prefix": "",
            "owner_id": "225398952351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nexchat-alb-sg"
            },
            "tags_all": {
              "Name": "nexchat-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d87da488b213d4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225398952351:security-group/sg-0f648d366d031203a",
            "description": "Security group for NexChat EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f648d366d031203a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask App",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nexchat-ec2-sg",
            "name_prefix": "",
            "owner_id": "225398952351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nexchat-ec2-sg",
              "Project": "nexchat"
            },
            "tags_all": {
              "Name": "nexchat-ec2-sg",
              "Project": "nexchat"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d87da488b213d4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225398952351:security-group/sg-0e4f960437c8241bc",
            "description": "Security group for NexChat RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4f960437c8241bc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f648d366d031203a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "nexchat-rds-sg",
            "name_prefix": "",
            "owner_id": "225398952351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nexchat-rds-sg",
              "Project": "nexchat"
            },
            "tags_all": {
              "Name": "nexchat-rds-sg",
              "Project": "nexchat"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d87da488b213d4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225398952351:subnet/subnet-0b89cb526338537a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b89cb526338537a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225398952351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nexchat-private-subnet-1",
              "Project": "nexchat",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "nexchat-private-subnet-1",
              "Project": "nexchat",
              "Type": "Private"
            },
            "vpc_id": "vpc-07d87da488b213d4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225398952351:subnet/subnet-0bc1ff2cf031b4299",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc1ff2cf031b4299",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225398952351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nexchat-private-subnet-2",
              "Project": "nexchat",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "nexchat-private-subnet-2",
              "Project": "nexchat",
              "Type": "Private"
            },
            "vpc_id": "vpc-07d87da488b213d4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225398952351:subnet/subnet-029dfc6a506951238",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029dfc6a506951238",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225398952351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nexchat-public-subnet-1",
              "Project": "nexchat",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "nexchat-public-subnet-1",
              "Project": "nexchat",
              "Type": "Public"
            },
            "vpc_id": "vpc-07d87da488b213d4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225398952351:subnet/subnet-0699611d4cccc2dc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0699611d4cccc2dc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225398952351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nexchat-public-subnet-2",
              "Project": "nexchat",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "nexchat-public-subnet-2",
              "Project": "nexchat",
              "Type": "Public"
            },
            "vpc_id": "vpc-07d87da488b213d4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:225398952351:vpc/vpc-07d87da488b213d4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c4aa3d70c739fde",
            "default_route_table_id": "rtb-0707cc76a476cb4ef",
            "default_security_group_id": "sg-0d3d13cd3f7b94fd4",
            "dhcp_options_id": "dopt-0c9e293422eb6979e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d87da488b213d4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0707cc76a476cb4ef",
            "owner_id": "225398952351",
            "tags": {
              "Environment": "production",
              "Name": "nexchat-vpc",
              "Project": "nexchat"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nexchat-vpc",
              "Project": "nexchat"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}